Fix image overflow in archive views

--- a/site/_includes/styles/components/_archive-list.scss
+++ b/site/_includes/styles/components/_archive-list.scss
@@ -2,6 +2,12 @@
    width: 100%;
    margin: ms(8) auto;
 
+   img {
+      // Means that even with `max-width` set to some arbitrary value, the image will
+      // never overflow its bounds.
+      width: 100%;
+   }
+
    .date {
       font-family: var(--sans);
       font-weight: 300;
